--- a/presenteToiSimon.html
+++ b/presenteToiSimon.html
@@ -144,10 +144,10 @@
 
   <section>
     <h2>♦ Portfolio</h2>
-    <ul>
-      <li><a href="site1.html">Site 1 – Présentation d’un projet local</a></li>
-      <li><a href="site2.html">Site 2 – Guide technique pour atelier</a></li>
-      <li><a href="site3.html">Site 3 – Formation numérique</a></li>
+   <ul>
+      <li><a href="https://kalsimiska.github.io/Formation-Mbujimayi_high_tech/">Site 1 – formation en programmation</a></li>
+      <li><a href="https://kalsimiska.github.io/Merveille-Hotel-DE-Mbujimayi-lumu-/">Site 2 –de l'hotel Merveille</a></li>
+      <li><a href="https://kalsimiska.github.io/Hotel-Gloria-DE-Mbujimayi/">Site 3 – Hotel Gloria</a></li>
     </ul>
   </section>
 
@@ -195,3 +195,4 @@
 
 </body>
 </html>
+
